# backfeed-live-demo

./: .gitignore  Dockerfile  MANIFEST.in  README.md  app.js  eclipse_erp.css  eclipse_erp.html  eclipse_erp.js  hope-youre-happy.html  index.css  index.html  mock_inventory_data.js  passcodes.json  pyproject.toml  server.py
backfeed/: __init__.py  cli.py  gui.py  server.py
backfeed/assets/: app.js  eclipse_erp.css  erp_profiles.js  fraud_shield.css  fraud_shield.html  fraud_shield.js  index.html
backfeed/assets/eclipse/: eclipse.js  index.html
backfeed/assets/shared/: data.js
backfeed/core/: __init__.py  config.py  license.py  mail.py  office.py  parser.py  teams.py
concepts/: ERP_Workflow_Concept.pptx
eclipse/: eclipse.css  eclipse.js  index.html
shared/: data.js  scenarios.js
